Wed Dec 22 12:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSImage.m: When creating an off-screen cache, fill with
	the background color (so having multiple caches for different
	backgrounds will work).
	Set 'NSImageDoesCaching' to 'YES' by default - we do image caching
	as standard now.

Wed Dec 22 10:08:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: ([-sendEvent:]) reset _lastDragView on exit from
	a view or on completion of dragging operation.  This ensures that if
	you do two drags into the same view, the view gets two draggingEntered
	messages (one for each session).

Wed Dec 22  5:24:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSPanel.m: Fixed image display in alert panel.

Tue Dec 21  01:25:00 1999  Enrico Sersale <enrico@imago.ro>

	* Added Source/NSBezierPath.m and Headers/AppKit/NSBezierPath.h

Mon Dec 20 16:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSView.m: Fix removal of view from window such that we reset
	the windows first responder if any of the removed views in first
	responder (avoid crash iv views subsequently deallocated).
	* Source/NSBundleAdditions.m: Removed excess release of bundle data.
	* Source/NSPanel.m: Call ([-sizeToFit]) for fields in alert panels
	so they are big enough for their contents.

Mon Dec 20 11:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSSavePanel.m: Use symbolic constants for resize mask.
	* Source/NSBrowser.m: size the matrix to fit when it is created.

Sat Dec 18 16:05:46 1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/AppKit/NSSplitView.h: Prefixed ivars with underscores;
 	changed widths' type from int to float; removed method
 	-setDividerThickNess:.  
	* Source/NSSplitView.m: Updated for ivar name change; access ivars
 	directly.  ([-dividerThickness]): Return 6, our default
 	dividerThickness.  ([-setDividerThickness:]): Removed method.